# VarSave

./: .gitignore  README.md  create.sh  pyproject.toml  snapshot.pkl  testload.py  testwrite.py
varsave/: __main__.py
varsave.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
